# projectwise_flaskui

./: chat_memory.sqlite  pyproject.toml  requirements.txt  runserver.py
chats/: base.py
chats/controllers/: chat.py  ingestion_pipeline.py  main.py  mcp_control.py
chats/static/css/: main.css  style.css  styles.css
chats/static/js/: chat.js  main.js  script.js  textFormatter.js  upload.js
chats/templates/: base.html  chat.html  index.html  sidebar.html
config/: flask_settings.py  mcp_settings.py
logs/: MCPClient.log.2025-08-01  base.log.2025-08-01  chat.log.2025-08-01  workflow_intent.log.2025-08-01
services/: mcp_client.py  mem0ai.py  pipeline_product_proposal.py  prompt_instruction.py  routing_workflow_intent.py
utils/: helper.py  logger.py
